# AI-AND-Telematices

Release-Version-1/: README.md
Release-Version-1/fleetos_v2_release1/fleetos_complete/: BUILD.md  CMakeLists.txt  fix-db.sh  fix-ownership.sh  migrate-v7.sql  restart.sh  start.sh
Release-Version-1/fleetos_v2_release1/fleetos_complete/agent-manager/: index.html
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/devops-agent/: devops_agent.py
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/driver-agent/: main.cpp
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/gps-server/: CMakeLists.txt  build.sh  gps-server.js  main.cpp
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/industry-agent/: main.cpp
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/maintenance-agent/: main.cpp
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/notification-agent/: main.cpp
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/report-agent/: report_agent.py
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/route-agent/: main.cpp
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/simulator-concurrent/: sim1000.js
Release-Version-1/fleetos_v2_release1/fleetos_complete/agents/simulator-qt/: CMakeLists.txt  SimulatorWindow.cpp  SimulatorWindow.h  build.sh  main.cpp
Release-Version-1/fleetos_v2_release1/fleetos_complete/config/: fleetos.env
Release-Version-1/fleetos_v2_release1/fleetos_complete/database/: fix-permissions.sql  init.sql  reset-admin.sql  schema_v2.sql  seed-admin-only.sql
Release-Version-1/fleetos_v2_release1/fleetos_complete/scripts/: build-all.sh  build.sh  restart-web.sh  start-all.sh  status.sh  stop-all.sh
Release-Version-1/fleetos_v2_release1/fleetos_complete/shared/include/: CBPCodec.h  Config.h  Geocoder.h  HttpServer.h  KafkaHelper.h  Logger.h
Release-Version-1/fleetos_v2_release1/fleetos_complete/web-panel/backend/: pages.js  server.js  test-db.js
Release-Version-1/fleetos_v2_release1/fleetos_complete/web-panel/frontend/: app.js  index.html  page-geofence.html  page-maintenance.html  page-map.html  page-routes.html  page-setup.html  pages.js  playback.html
